# PiLomar-pico-controller

./: .gitignore  CMakeLists.txt  LICENSE  Motor.cpp  Motor.h  README.md  Stepper.cpp  Stepper.h  doorAPI.conf.yaml  doorAPI.yaml  lwipopts.h  main.cpp  oldCMakeLists  tusb_config.h  tusb_config.old  tusb_lwip_glue.c  usb_descriptors-cdc.c  usb_descriptors.c
hardware/: Pico board.brd  Pico board.sch
include/nlohmann/: json.hpp
include/nlohmann/detail/meta/: type_traits.hpp
webserver/: ApiServer.cpp  ApiServer.h  CMakeLists.txt  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  HttpStatus.h  UrlMapper.cpp  UrlMapper.h  WebServer-lwip.cpp  WebServer-lwip.h  WebServer.cpp  WebServer.h
